--- a/src/assets/fonts/iconfont.css
+++ b/src/assets/fonts/iconfont.css
@@ -2,9 +2,9 @@
   font-family: "iconfont"; /* Project id 4215896 */
   /* Color fonts */
   src: 
-       url('iconfont.woff2?t=1692333391478') format('woff2'),
-       url('iconfont.woff?t=1692333391478') format('woff'),
-       url('iconfont.ttf?t=1692333391478') format('truetype');
+       url('iconfont.woff2?t=1693212248900') format('woff2'),
+       url('iconfont.woff?t=1693212248900') format('woff'),
+       url('iconfont.ttf?t=1693212248900') format('truetype');
 }
 
 .iconfont {
@@ -13,6 +13,22 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-youjian:before {
+  content: "\e62f";
+}
+
+.icon-yinyue:before {
+  content: "\e667";
+}
+
+.icon-github:before {
+  content: "\e673";
+}
+
+.icon-bilibili:before {
+  content: "\e602";
 }
 
 .icon-home-c:before {
